@@ -13,6 +13,7 @@
 - illumina2bam
 - qc_tag_metrics
 - update_warehouse
+- update_ml_warehouse
 - harold_alignment_files
 - harold_calibration_tables
 - harold_recalibration
