@@ -36,3 +36,4 @@
 - upload_auto_qc_to_qc_database
 - run_run_archived
 - move_to_outgoing
+- update_ml_warehouse
